<resources>
    <string name="app_name">UPIK</string>
    <string name="facebook_app_id">357756334906243</string>
    <string name="Username">Username</string>
    <string name="EmailAddress">Email Address</string>
    <string name="Password">Password</string>
    <string name="cPassword">Confirm Password</string>
    <string name="Signup">Sign up</string>
    <string name="loginwithfacebook">login with facebook</string>
    <string name="OR">OR</string>
    <string name="login">log in</string>
    <string name="orloginviaEmail">Or Login  Via Email</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="donthaveaccount">Don\'t have an account yet?</string>
    <string name="signup"> Sign up</string>
    <string name="jhonsmith">Jhon Smith</string>
    <string name="jhonsmith_gmail_com">jhonsmith@gmail.com</string>
    <string name="Home">Home</string>
    <string name="nearbyjobs">Nearby Jobs</string>
    <string name="profile">Profile</string>
    <string name="setting">Setting</string>
    <string name="Login">Login</string>
    <string name="logout">Logout</string>
    <string name="myjobs">My Jobs</string>
    <string name="payment">Payment</string>
    <string name="Favorite">Favorite Jobs</string>
    <string name="Office">Office</string>
    <string name="upik">UPIK</string>
    <string name="Restaurants">Restaurants</string>
    <string name="Shops">Shops</string>
    <string name="Parlor">Parlor</string>
    <string name="mondayfebruary192019">Monday,February19,2019</string>
    <string name="starbuckscoffee">Starbucks Coffee</string>
    <string name="Lookingforaparttimecleanertohelpuscleanthekitchen">Looking for a part time cleaner to help us clean the kitchen</string>
    <string name="feb182019200pm">Feb 18,2019 2:00PM</string>
    <string name="dollar">$30</string>
    <string name="dis">0.8ml</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="parttimedeliveryguyneededforafewhoursaday">Part time delivery guy needed for a few hours a day</string>
    <string name="thufeb">Thu,Feb 14</string>
    <string name="time">8:30 AM - 12:30 PM</string>
    <string name="estworkinghrs">Est.working hours: 4hrs</string>
    <string name="totalpay">total pay</string>
    <string name="whatyouwillbedoing">what you will be doing</string>
    <string name="youwillbefinding">You will be finding our product location in the store,unloading merchandise from the back room,stocking shelves with unpacked items,ensuring labels are clear and visible,and replacing damaged or missing products.</string>
    <string name="requirements">requirements</string>
    <string name="communication">communication skill and knowledge of Math and English</string>
    <string name="mustbe">Must be able to lift up to 40 lbs to shoulder height unassisted</string>
    <string name="wear">waer clothes and shoes comfortable for walking long distances</string>
    <string name="arrival">arrival instructions</string>
    <string name="checkin">Check-in with the supervisor upon arrival.Sign in at the front desk</string>
    <string name="apply">Apply</string>
    <string name="pending">Applied</string>
    <string name="active">Active</string>
    <string name="completed">Completed</string>
    <string name="Cancelled">Cancelled</string>
    <string name="TotalPaymenttodate">Total Payment To Date</string>
    <string name="alert_username">Please enter username.</string>
    <string name="alert_email">Please enter email.</string>
    <string name="alert_emailvalid">Please enter valid email.</string>
    <string name="alert_password">Please enter password.</string>
    <string name="alert_cpassword">Please enter confirm password.</string>
    <string name="alert_mismatchedPass">Passwords are not matching.</string>
    <string name="alertlogout">Are you sure want to logout?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="check_connection">Please check your internet connection</string>
</resources>
