<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/orange"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="30dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/backk" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:text="@string/upik"
                        android:textColor="@android:color/background_light"
                        android:textSize="17dp"
                        android:textStyle="bold" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/Img_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/top_mapicon" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="220dp">

                <ImageView
                    android:id="@+id/Background"
                    android:layout_width="match_parent"
                    android:layout_height="170dp"
                    android:background="@color/green" />

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/layout_bg">

                </LinearLayout>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_jobimage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/man"/>

                <ImageView
                    android:id="@+id/img_fav"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="right"
                    android:layout_marginBottom="25dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/unlike" />

            </RelativeLayout>


            <TextView
                android:id="@+id/txt_JobMarchant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center_horizontal"
                android:text="@string/starbuckscoffee"
                android:textColor="@android:color/black"
                android:textSize="25dp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/ratingLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RatingBar
                    android:id="@+id/ratingBarMain"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:isIndicator="true"
                    android:theme="@style/RatingBar"
                    android:numStars="5"
                    android:scaleX=".5"
                    android:scaleY=".5"
                   android:layout_marginTop="-7dp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/txt_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/parttimedeliveryguyneededforafewhoursaday"
                android:textColor="@android:color/black"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/txt_Jobtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/parttimedeliveryguyneededforafewhoursaday"
                android:textColor="@android:color/black"
                android:textSize="20dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="7dp"
                android:layout_marginTop="10dp"
                android:background="@color/light_grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/img_Datepicker"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:background="@drawable/calendar" />

                        <TextView
                            android:id="@+id/txt_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="10dp"
                            android:text="@string/thufeb"
                            android:textColor="@android:color/black"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:background="@drawable/calendar" />

                        <TextView
                            android:id="@+id/txt_dateEnd"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="10dp"
                            android:text="@string/thufeb"
                            android:textColor="@android:color/black"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:background="@drawable/time" />

                        <TextView
                            android:id="@+id/txt_jobtime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="10dp"
                            android:text="@string/time"
                            android:textColor="@android:color/black"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/txt_WorkingHours"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:text="@string/estworkinghrs"
                        android:textStyle="italic" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/circle"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txt_pay"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="$60"
                            android:textColor="@android:color/black"
                            android:textSize="25dp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/totalpay"
                            android:textColor="@android:color/black"
                            android:textSize="12dp" />

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="7dp"
                android:layout_marginTop="30dp"
                android:background="@color/light_grey" />

            <TextView
                android:id="@+id/what"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/whatyouwillbedoing"
                android:textAllCaps="true"
                android:textColor="@color/text_grey"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/youwillbefinding"
                android:textColor="@android:color/black"
                android:textSize="15dp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="7dp"
                android:layout_marginTop="20dp"
                android:background="@color/light_grey" />

            <TextView
                android:id="@+id/req"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/requirements"
                android:textAllCaps="true"
                android:textColor="@color/text_grey"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/check" />

                <TextView
                    android:id="@+id/txt_requirement1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/communication"
                    android:textColor="@android:color/black"
                    android:textSize="15dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/check" />

                <TextView
                    android:id="@+id/txt_requirement2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/mustbe"
                    android:textColor="@android:color/black"
                    android:textSize="15dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/check" />

                <TextView
                    android:id="@+id/txt_requirement3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/wear"
                    android:textColor="@android:color/black"
                    android:textSize="15dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/arrivel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/arrival"
                android:textAllCaps="true"
                android:textColor="@color/text_grey"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_arrival"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/checkin"
                android:textColor="@android:color/black"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_apply"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/text_box_orange"
                android:gravity="center"
                android:text="@string/apply"
                android:textColor="@color/white"
                android:textSize="20dp" />

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/Progressbar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>
