<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:shimmer="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_grey"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/lin_staticTab"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_pending"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/pending"
                    android:textColor="@color/light_orange"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/txt_active"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:gravity="center_horizontal"
                    android:text="@string/active"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/txt_completed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:gravity="center_horizontal"
                    android:text="@string/completed"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/txt_cancelled"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:gravity="center_horizontal"
                    android:text="@string/Cancelled"
                    android:textSize="17sp" />

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/Recycler_Category"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:visibility="gone" />


        </RelativeLayout>

        <View
            android:id="@+id/view_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            shimmer:duration="800">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/layout" />

                <include layout="@layout/layout" />

                <include layout="@layout/layout" />

                <include layout="@layout/layout" />

                <include layout="@layout/layout" />

                <include layout="@layout/layout" />

                <include layout="@layout/layout" />

                <include layout="@layout/layout" />

                <include layout="@layout/layout" />

                <include layout="@layout/layout" />

                <include layout="@layout/layout" />

            </LinearLayout>

        </com.facebook.shimmer.ShimmerFrameLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/Recyler_nearbyjob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

    <TextView
        android:id="@+id/txt_noJobs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="5dp"
        android:text="No my jobs...!"
        android:textSize="17sp"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/Progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>
